Fix DemoApp/pom.xml exec issue which prevented FluidSynthEmbeddedSynth from being used